# poli-workshop2

./: README.md  pyproject.toml  requirements.txt  requiriments.txt
app/: main.py  settings.py
app/exemplo_01/: main.py
app/exemplo_02/: langchain_example.py  pydaticai_example.py
app/exemplo_03/: exemplo_openai.py
app/exemplo_04/: rag_example.py
