[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.9",
    "openai>=1.68.2",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "pydantic-ai>=0.0.43",
    "pydantic-ai-slim[openai]>=0.0.43",
    "rich>=13.9.4",
    "pypdf>=5.4.0",
    "pinecone>=6.0.2",
    "langchain-pinecone>=0.2.0",
    "fastapi[standard]>=0.115.12",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20250306",
]
